TODO
* optical disc
  - add track type support
  - add session support
* make sure error_ranges is cleared on open
* configure validate libuna check
* work on libsmdev_metadata
  - add information values functions (libsmio)

API
* add libsmdev_handle_get_utf8_information_value_size
* add libsmdev_handle_get_utf16_information_value_size

Library
* add glib support
* move fstat to file_io ?
Read:
* windows read error retry support
Media information:
* add Windows support for accessing memory device
* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* add msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20110904
* fix for missing last character
* reduced SCSI and USB ioctl timeout to 1 sec
* renamed optical disk to optical disc
* refactored sector list to arrays
* worked on session support

20110831
* updated configure, libuna

20110731
* renamed HAVE_STORAGE_BUS_TYPE to HAVE_WINIOCTL_H_STORAGE_BUS_TYPE

20110727
* updated common
* worked on optical dics track functions
* added UTF-16 information value functions
* updated manuals

20110625
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated include/codepage.h, list type
* updated common, libcstring, libuna

20110322
* updated configure.ac
* updated libcstring

20110306
* updated libuna
* msvscpp added VSDebug option

20110303
* update for Cygwin WINAPI support
* updated libcstring

20110117
* updated libuna
* fixed invalid information value issue
* WINAPI added fallback media size detection for floppy drive
* fix for return value of FormatMessage

20110114
* updated common, libuna

20110110
* updated libcstring, libuna

20110108